--- a/EqUiWebUi/Views/Gadata/PloegRapportWebgrid.cshtml
+++ b/EqUiWebUi/Views/Gadata/PloegRapportWebgrid.cshtml
@@ -11,7 +11,7 @@
     </div>
 
     <div class="panel-footer">
-        @MyFilters.LocationDropdownBrownfield("PloegRapport", "/Gadata/PloegRapportWebgrid")
+        @MyFilters.LocationDropdownBrownfield("PloegRapport")
         <p class="pull-right" id="Refreshinfo"> Last data push: ?????</p>
     </div>
 </div>
@@ -26,7 +26,7 @@
         //subscribe to modal click
         ListenToModal('#tableModal');
         //enable polling for new data
-        CheckRefreshTable(5, '@Url.Action("PloegRapportcheckNewData")', '@Url.Action("_ploegRapport")', '#PloegRapport');
+        CheckRefreshTable(5, '@Url.Action("PloegRapportcheckNewData")', '#PloegRapport');
         //hide the navbar and move body content up
         Navbar(false);
         //subscribe to row clicked events
