--- a/EqUiWebUi/Views/Gadata/PloegRapportWebgrid.cshtml
+++ b/EqUiWebUi/Views/Gadata/PloegRapportWebgrid.cshtml
@@ -4,36 +4,51 @@
 }
 
 <div>
-    <p></p>
-    <p></p>
-    <div>
-        @Html.AjaxGrid(Url.Action("_ploegRapport"))
-    </div>
-
-    <div class="panel-footer">
+  @Html.Action("_ploegRapport")
+  <div class="panel-footer">
         @MyFilters.LocationDropdownBrownfield("PloegRapport")
         <p class="pull-right" id="Refreshinfo"> Last data push: ?????</p>
     </div>
 </div>
 
 @*render popuover modal*@
-<div>
-    @MyModals.tableHelperModal("tableModal")
+<div id="MyModal" class="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-content">Loading....</div>
 </div>
 
 <script type="text/javascript">
     $(document).ready(function () {
-        //subscribe to modal click
-        ListenToModal('#tableModal');
-        //enable polling for new data
-        CheckRefreshTable(5, '@Url.Action("PloegRapportcheckNewData")', '#PloegRapport');
-        //hide the navbar and move body content up
-        Navbar(false);
         //subscribe to row clicked events
         $('#PloegRapport').mvcgrid({
+            sourceUrl: '@Url.Action("_ploegRapport")',
             rowClicked: function (row, data, e) {
-                console.log("row click:") & console.log(data);
-            }
+
+                var urlMoreInfo = '@Url.Action("_Moreinfo","Gadata")?location=' + encodeURIComponent(data.Location)
+                    + '&errornum=' + encodeURIComponent(data.Logcode)
+                    + '&refid=' + encodeURIComponent(data.refId)
+                    + '&logtype=' + encodeURIComponent(data.Logtype)
+                    + '&logtext=' + encodeURIComponent(data.logtext)
+
+                //launch modal
+                $('#MyModal').modal({ remote: urlMoreInfo });
+            },
+            reloadEnded: function () {
+                //must call afther each reload end.
+                tableFormatLogtype(8);
+            },
+        });
+        //hide the navbar if in full screen
+        if ((screen.availHeight || screen.height - 30) <= window.innerHeight) {
+            // browser is almost certainly fullscreen
+           // Navbar(false);
+        }
+        //format table
+        tableFormatLogtype(8);
+        //enable polling for new data
+        CheckRefreshTable(5, '@Url.Action("PloegRapportcheckNewData")', '#PloegRapport');
+        //on modal close
+        $('#MyModal').on('hidden.bs.modal', function (e) {
+            $('#MyModal').html('<div class="modal-content">Loading....</div>');
         });
     });
 </script>
