--- a/EqUiWebUi/Views/Gadata/SupervisieWebgrid.cshtml
+++ b/EqUiWebUi/Views/Gadata/SupervisieWebgrid.cshtml
@@ -6,40 +6,56 @@
 }
 
 <div>
-    <p></p>
-    <p></p>
-    <div>
-        <div>
-            @Html.AjaxGrid(Url.Action("_supervisie"))
-        </div>
-
-        <div class="panel-footer">
+  @Html.Action("_supervisie")
+  <div class="panel-footer">
             @MyFilters.LocationDropdownBrownfield("Supervisie")
             <p class="pull-right"> Last data push: ????</p>
         </div>
-    </div>
 </div>
 
 
 @*render popuover modal*@
-<div>
-    @MyModals.tableHelperModal("tableModal")
+<div id="MyModal" class="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-content">Loading....</div>
 </div>
 
 
 <script type="text/javascript">
     $(document).ready(function () {
-        //subscribe to modal click
-        ListenToModal('#tableModal');
-        //enable polling for new data
-        CheckRefreshTable(5, '@Url.Action("SupervisiecheckNewData")','#Supervisie');
-        //hide the navbar and move body content up
-        Navbar(false);
         //subscribe to row clicked events
         $('#Supervisie').mvcgrid({
+            sourceUrl: '@Url.Action("_supervisie")',
             rowClicked: function (row, data, e) {
-                console.log("row click:") & console.log(data);
-            }
+
+                    var urlMoreInfo = '@Url.Action("_Moreinfo","Gadata")?location=' + encodeURIComponent(data.Location)
+                        + '&errornum=' + encodeURIComponent(data.Logcode)
+                        + '&refid=' + encodeURIComponent(data.refId)
+                        + '&logtype=' + encodeURIComponent(data.Logtype)
+                        + '&logtext=' + encodeURIComponent(data.logtext)
+
+                    //launch modal
+                   $('#MyModal').modal({ remote: urlMoreInfo });
+            },
+            reloadEnded: function () {
+               //must call afther each reload end.
+               tableFormatLogtype(7);
+            },
+        });
+        //hide the navbar if in full screen
+        if (screen.height <= window.innerHeight) {
+            // browser is almost certainly fullscreen
+           // Navbar(false);
+        }
+        //enable blinking
+        tableFormatBlink(7, 6);
+        //format table
+        tableFormatLogtype(7);
+        //enable polling for new data
+        CheckRefreshTable(5, '@Url.Action("SupervisiecheckNewData")', '#Supervisie');
+        //on modal close
+        $('#MyModal').on('hidden.bs.modal', function (e) {
+            $('#MyModal').html('<div class="modal-content">Loading....</div>');
         });
     });
 </script>
+
