--- a/EqUiWebUi/Views/Gadata/_supervisie.cshtml
+++ b/EqUiWebUi/Views/Gadata/_supervisie.cshtml
@@ -1,40 +1,18 @@
 ﻿@model IEnumerable<EqUiWebUi.Models.Supervisie>
 
 @Html.Grid(Model).Named("Supervisie").Build(columns =>
-       {
-           columns.Add(c => c.Location).Titled("Location").Filterable(true);
-           columns.Add(c => c.logtext).Titled("Logtext").Css("hidden-sm hidden-xs");
-           columns.Add(c => c.DT).Titled("DT");
-           columns.Add(c => c.time).Titled("time");
-           columns.Add(c => c.Classification).Titled("Class");
-           columns.Add(c => c.Subgroup).Titled("Subgroup");
-           columns.Add(c => c.Logtype).Titled("LogType").Filterable(true);
-           columns.Add(c => c.LocationTree)
-           .Titled("Info")
-           .Encoded(false)
-           .Filterable(true)
-           .RenderedAs(o => Html.ActionLink("INFO", "_Moreinfo",
-              new
-              {
-                  location = o.Location,
-                  errornum = o.Logcode,
-                  refid = o.refId,
-                  logtype = o.Logtype,
-                  logtext = o.logtext
-              },
-                new { @class = "modal-link" }
-                )
-           );
-       }).Sortable().Pageable(pager =>
-       {
-           pager.RowsPerPage = 20;
-       }).Empty("No data found").Css("table-hover")
-
-<script>
-    //subscrible this table to events
-    $('#Supervisie').mvcgrid();
-    //set colors for grid
-    tableFormatLogtype(7);
-    //enable blinking
-    tableFormatBlink(7, 6);
-</script>
+{
+    columns.Add(c => c.Location).Titled("Location").Filterable(true);
+    columns.Add(c => c.logtext).Titled("Logtext").Css("hidden-sm hidden-xs");
+    columns.Add(c => c.DT).Titled("DT");
+    columns.Add(c => c.time).Titled("time");
+    columns.Add(c => c.Classification).Titled("Class");
+    columns.Add(c => c.Subgroup).Titled("Subgroup");
+    columns.Add(c => c.Logtype).Titled("LogType").Filterable(true);
+    columns.Add(c => c.LocationTree).Filterable(true).Css("hidden");
+    columns.Add(c => c.Logcode).Css("hidden");
+    columns.Add(c => c.refId).Css("hidden");
+}).Sortable().Pageable(pager =>
+{
+    pager.RowsPerPage = 20;
+}).Empty("No data found").Css("table-hover")
