--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -123,7 +123,20 @@
                 <a href="~/Spc/index" class="btn btn-primary btn-sm">SPC &raquo;</a>
                 Spc index
             </p>
+
+
+            @{
+                string url1 = @Uri.EscapeDataString("../NgacElectrode/CurrentTipstatus");
+                string url2 = @Uri.EscapeDataString("https://sharepoint.volvocars.net/sites/maintenance_a_shop/Lists/Whiteboard%20Issues/AllItems.aspx");
+                string url3 = @Uri.EscapeDataString("../Gadata/SupervisieWebgrid");
+                string url4 = @Uri.EscapeDataString("http://webapps.gen.volvocars.net/applications/eng/equipment/supervisiep1/intranet/framing.htm");
+                <p>
+                    <a href="~/Home/Rendersites?url1=@url1&url2=@url2&url3=@url3&url4=@url4" class="btn btn-primary btn-sm">Test &raquo;</a>
+                    Test
+                </p>
+            }
         </div>
+
     </div>
 
 </div>
