--- a/EqUiWebUi/Views/NgacElectrode/PlanTipChange.cshtml
+++ b/EqUiWebUi/Views/NgacElectrode/PlanTipChange.cshtml
@@ -37,14 +37,14 @@
                         <div class="col-sm-5">
                             <label class="control-label col-sm-8" for="minwear">waar de wear groter is dan</label>
                             <div class="col-sm-4">
-                                <input class="form-control input-sm" type="number" min="0" max="100" step="5" value="25" id="minwear" />
+                                <input class="form-control input-sm" type="number" min="0" max="100" step="5" value="60" id="minwear" />
                             </div>
                         </div>
-
+                        
                         <div class="col-sm-7">
                             <label class="control-label col-sm-8" for="minparts">minimum resterende stukken kleiner dan</label>
                             <div class="col-sm-4">
-                                <input class="form-control input-sm" type="number" min="0"  step="10" value="200" id="minparts" />
+                                <input class="form-control input-sm" type="number" min="0"  step="10" value="200" id="minparts" disabled />
                             </div>
                         </div>
 
