--- a/EqUiWebUi/Views/Shared/_Layout.cshtml
+++ b/EqUiWebUi/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
 
                 </ul>
 
-                <a class="nav navbar-text navbar-right" data-toggle="tooltip" data-placement="bottom" title="@User.Identity.Name">
+                <a class="nav navbar-text navbar-right" data-container="body" data-toggle="popover" data-placement="bottom" data-content="@User.Identity.Name">
                     <img src="~/Content/images/icons8-customer-25.png" />
                 </a>
 
