--- a/EqUiWebUi/Views/Gadata/PloegRapportWebgrid.cshtml
+++ b/EqUiWebUi/Views/Gadata/PloegRapportWebgrid.cshtml
@@ -4,23 +4,30 @@
 }
 
 <div>
-  @Html.Action("_ploegRapport")
-  <div class="panel-footer">
-        @MyFilters.LocationDropdownBrownfield("PloegRapport")
-        <p class="pull-right" id="Refreshinfo"> Last data push: ?????</p>
+    @Html.Action("_ploegRapport")
+    <div class="panel-footer">
+        <div class="row">
+            <div class="col-sm-2">
+                @MyFilters.LocationDropdownGlobal("PloegRapport")
+            </div>
+            <div class="col-sm-4"></div>
+            <div class="col-sm-6">
+                <p class="pull-right" id="PushInfo"> Last data push: ????</p>
+            </div>
+        </div>
     </div>
-</div>
 
-@*render popuover modal*@
-<div id="MyModal" class="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-content">Loading....</div>
-</div>
+    @*render popuover modal*@
+    <div id="MyModal" class="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-content">Loading....</div>
+    </div>
 
-<script type="text/javascript">
+    <script type="text/javascript">
     $(document).ready(function () {
         //subscribe to row clicked events
         $('#PloegRapport').mvcgrid({
             sourceUrl: '@Url.Action("_ploegRapport")',
+            query: '?search=test', // Grid query string
             rowClicked: function (row, data, e) {
 
                 var urlMoreInfo = '@Url.Action("_Moreinfo","Gadata")?location=' + encodeURIComponent(data.Location)
@@ -51,4 +58,4 @@
             $('#MyModal').html('<div class="modal-content">Loading....</div>');
         });
     });
-</script>
+    </script>
