--- a/EqUiWebUi/Views/Gadata/_ploegRapport.cshtml
+++ b/EqUiWebUi/Views/Gadata/_ploegRapport.cshtml
@@ -3,12 +3,12 @@
 @Html.Grid(Model).Named("PloegRapport").Build(columns =>
 {
     columns.Add(c => c.Location).Titled("Location").Filterable(true);
-    columns.Add(c => c.logtext).Titled("Logtext").Css("hidden-sm hidden-xs");
-    columns.Add(c => c.Response_min_).Titled("RT");
-    columns.Add(c => c.Downtime_min_).Titled("DT");
-    columns.Add(c => c.Count).Titled("Count");
+    columns.Add(c => c.logtext).Titled("Logtext").Filterable(true).Css("hidden-sm hidden-xs");
+    columns.Add(c => c.Response_min_).Titled("RT").Filterable(true);
+    columns.Add(c => c.Downtime_min_).Titled("DT").Filterable(true);
+    columns.Add(c => c.Count).Titled("Count").Filterable(true);
     columns.Add(c => c.time).Titled("Time");
-    columns.Add(c => c.Subgroup).Titled("Subgroup");
+    columns.Add(c => c.Subgroup).Titled("Subgroup").Filterable(true);
     columns.Add(c => c.Logtype).Titled("Logtype").Filterable(true);
     columns.Add(c => c.LocationTree).Filterable(true).Css("hidden");
     columns.Add(c => c.Logcode).Css("hidden");
