--- a/EqUiWebUi/Views/Home/Rendersites.cshtml
+++ b/EqUiWebUi/Views/Home/Rendersites.cshtml
@@ -5,13 +5,13 @@
         <div class="row">
             <div class="col-lg-6">
                 <div class="intrinsic-container intrinsic-container-16x9">
-                    <iframe src="//www.youtube.com/embed/KMYrIi_Mt8A" allowfullscreen></iframe>
+                    <iframe src="@ViewBag.url1" allowfullscreen></iframe>
                 </div>
             </div>
 
             <div class="col-lg-6">
                 <div class="intrinsic-container intrinsic-container-16x9">
-                    <iframe src="//www.youtube.com/embed/KMYrIi_Mt8A" allowfullscreen></iframe>
+                    <iframe src="@ViewBag.url2" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
@@ -21,13 +21,13 @@
         <div class="row">
             <div class="col-lg-6">
                 <div class="intrinsic-container intrinsic-container-16x9">
-                    <iframe src="//www.youtube.com/embed/KMYrIi_Mt8A" allowfullscreen></iframe>
+                    <iframe src="@ViewBag.url3" allowfullscreen></iframe>
                 </div>
             </div>
 
             <div class="col-lg-6">
                 <div class="intrinsic-container intrinsic-container-16x9">
-                    <iframe src="//www.youtube.com/embed/KMYrIi_Mt8A" allowfullscreen></iframe>
+                    <iframe src="@ViewBag.url4" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
