--- a/EqUiWebUi/Views/Gadata/PloegRapportWebgrid.cshtml
+++ b/EqUiWebUi/Views/Gadata/PloegRapportWebgrid.cshtml
@@ -57,5 +57,8 @@
         $('#MyModal').on('hidden.bs.modal', function (e) {
             $('#MyModal').html('<div class="modal-content">Loading....</div>');
         });
+        //full with screen
+        $("#allcontent").removeClass("body-content");
+        $("#allcontent").removeClass("container");
     });
     </script>
