--- a/EqUiWebUi/Views/Gadata/SupervisieWebgrid.cshtml
+++ b/EqUiWebUi/Views/Gadata/SupervisieWebgrid.cshtml
@@ -62,6 +62,9 @@
         $('#MyModal').on('hidden.bs.modal', function (e) {
             $('#MyModal').html('<div class="modal-content">Loading....</div>');
         });
+        //full with screen
+        $("#allcontent").removeClass("body-content");
+        $("#allcontent").removeClass("container");
     });
 </script>
 
