--- a/EqUiWebUi/Views/NgacElectrode/CurrentTipstatus.cshtml
+++ b/EqUiWebUi/Views/NgacElectrode/CurrentTipstatus.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "CurrentTipstatus";
 }
 @*html*@
-<div>
+<div class="container body-content">
     <div class="panel panel-default">
         <div class="panel-body">
             @Html.Action("_TipStatus")
