--- a/EqUiWebUi/Content/CustomStyleTweeks.css
+++ b/EqUiWebUi/Content/CustomStyleTweeks.css
@@ -31,3 +31,8 @@
     border: 1px solid #888;
     width: 80%;
 }
+
+/*max with for popovers*/
+.popover {
+    max-width: 100%; /* Max Width of the popover (depending on the container!) */
+}
