complete rebuild of maximo UI

--- a/EqUiWebUi/App_Code/MyFilters.cshtml
+++ b/EqUiWebUi/App_Code/MyFilters.cshtml
@@ -1,25 +1,5 @@
-﻿@*drop down control for filtering on 'locationtree'*@
-@helper LocationDropdown(string id)
-    {
-        <select class="form-control input-sm" id="@id" name="Selecteer locatie">
-            <optgroup label="CMA UB12 floorline">
-                <option value="A LIJN 33">Floor (all)</option>
-                <option value="A LIJN 331">Frontstructure</option>
-                <option value="A LIJN 334">Frontfloor</option>
-                <option value="A LIJN 336">Rearfloor</option>
-                <option value="A LIJN 338">Marriage</option>
-            </optgroup>
-            <optgroup label="CMA Sides">
-                <option value="A LIJN 35">Sides (all)</option>
-            </optgroup>
-            <optgroup label="CMA Preassembly">
-                <option value="GA4.0">GA4.0</option>
-            </optgroup>
-        </select>
-}
-
-@*drop down control for filtering on 'assets'*@
-@helper AssetDropdown(string id)
+﻿@*drop down control for filtering on 'assets'*@
+@helper AssetDropdownGlobal(string id, string value = "")
     {
         <select class="form-control input-sm" id="@id" name="Selecteer locatie">
             <option value="U">all assets</option>
@@ -36,51 +16,10 @@
         </select>
 }
 
-@*dropdown filter that redirects to page
-    Leave ID blank!
-*@
-@helper LocationDropdownBrownfield(string GridId, bool dropup = false)
+@*drop down control for filtering on 'locationtree' *@
+@helper LocationDropdownGlobal(string id, string value = "")
     {
-        <div class="dropup" id="LocationDropdownBrownfield">
-            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                Set a location filter
-                <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu">
-                <li onclick="SetAjaxGridFilter('@GridId','')">ClearFilter</li>
-                <li onclick="SetAjaxGridFilter('@GridId','@GridId-LocationTree-Contains=AAL')">P3</li>
-                <li onclick="SetAjaxGridFilter('@GridId','@GridId-LocationTree-Contains=A FLOOR L')">A FLOOR L</li>
-                <li onclick="SetAjaxGridFilter('@GridId','@GridId-LocationTree-Contains=A SIBO L')">A SIBO L</li>
-                <li onclick="SetAjaxGridFilter('@GridId','@GridId-LocationTree-Contains=P4')">P4</li>
-                <li onclick="SetAjaxGridFilter('@GridId','@GridId-LocationTree-Contains=A FLOOR S')">A FLOOR S</li>
-                <li onclick="SetAjaxGridFilter('@GridId','@GridId-LocationTree-Contains=A SIBO S')">A SIBO S</li>
-            </ul>
-        </div>
-}
-
-@helper LocationDropdownGreenField(string GridId, bool dropup = false)
-    {
-        <div class="dropup" id="LocationDropdownGreenField">
-            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                Set a location filter
-                <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu">
-                <li onclick="SetAjaxGridFilter('@GridId','')">ClearFilter</li>
-                <li onclick="SetAjaxGridFilter('@GridId','@GridId-LocationTree-Contains=A LIJN 33')">Floor (all)</li>
-                <li onclick="SetAjaxGridFilter('@GridId','@GridId-LocationTree-Contains=A LIJN 331')">Frontstructure</li>
-                <li onclick="SetAjaxGridFilter('@GridId','@GridId-LocationTree-Contains=A LIJN 334')">Frontfloor</li>
-                <li onclick="SetAjaxGridFilter('@GridId','@GridId-LocationTree-Contains=A LIJN 336')">Rearfloor</li>
-                <li onclick="SetAjaxGridFilter('@GridId','@GridId-LocationTree-Contains=A LIJN 338')">Marriage</li>
-                <li onclick="SetAjaxGridFilter('@GridId','@GridId-LocationTree-Contains=A LIJN 35')">Sides</li>
-                <li onclick="SetAjaxGridFilter('@GridId','@GridId-LocationTree-Contains=GA4.0')">Preassembly</li>
-            </ul>
-        </div>
-}
-
-@helper LocationDropdownGlobal(string GridId, bool dropup = false)
-    {
-        <select class="form-control input-sm" id="LocationDropdownGlobal" name="Selecteer locatie" onchange="SetAjaxGridFilter('@GridId','@GridId-LocationTree-Contains='+this.value)">
+        <select class="form-control input-sm" id="@id" name="Select location">
             <option value="">no Filter</option>
             <optgroup label="CMA UB12 floorline">
                 <option value="A LIJN 33">Floor (all)</option>
@@ -104,6 +43,26 @@
                 <option value="AAS">AAS (all)</option>
                 <option value="A FLOOR S">A FLOOR S</option>
                 <option value="A SIBO S">A SIBO S</option>
+            </optgroup>
+        </select>
+}
+
+@*drop down control for filtering on 'locationtree' Greenfield only*@
+@helper LocationDropdownGreenfield(string id)
+    {
+        <select class="form-control input-sm" id="@id" name="Select location">
+            <optgroup label="CMA UB12 floorline">
+                <option value="A LIJN 33">Floor (all)</option>
+                <option value="A LIJN 331">Frontstructure</option>
+                <option value="A LIJN 334">Frontfloor</option>
+                <option value="A LIJN 336">Rearfloor</option>
+                <option value="A LIJN 338">Marriage</option>
+            </optgroup>
+            <optgroup label="CMA Sides">
+                <option value="A LIJN 35">Sides (all)</option>
+            </optgroup>
+            <optgroup label="CMA Preassembly">
+                <option value="GA4.0">GA4.0</option>
             </optgroup>
         </select>
 }
