--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -96,7 +96,7 @@
         </div>
         <div class="panel-body">
             <p>
-                <a href="~/Maximo/index" class="btn btn-primary btn-sm">Maximo &raquo;</a>
+                <a href="~/Maximo_ui/Maximo/index" class="btn btn-primary btn-sm">Maximo &raquo;</a>
                 Alles in verband met maximo
             </p>
         </div>
@@ -126,9 +126,9 @@
 
             @{
                 string url1 = @Uri.EscapeDataString("../NgacElectrode/CurrentTipstatus");
-                string url2 = @Uri.EscapeDataString("https://sharepoint.volvocars.net/sites/maintenance_a_shop/Lists/Whiteboard%20Issues/AllItems.aspx");
+                string url2 = @Uri.EscapeDataString("../Gadata/PloegRapportWebgrid");
                 string url3 = @Uri.EscapeDataString("../Gadata/SupervisieWebgrid");
-                string url4 = @Uri.EscapeDataString("http://webapps.gen.volvocars.net/applications/eng/equipment/supervisiep1/intranet/framing.htm");
+                string url4 = @Uri.EscapeDataString("http://webapps.gen.volvocars.net/applications/eng/equipment/SuperVisieP1/Framing.jpg");
                 <p>
                     <a href="~/Home/Rendersites?url1=@url1&url2=@url2&url3=@url3&url4=@url4" class="btn btn-primary btn-sm">Test &raquo;</a>
                     Test
