--- a/EqUiWebUi/Views/Home/Rendersites.cshtml
+++ b/EqUiWebUi/Views/Home/Rendersites.cshtml
@@ -60,6 +60,10 @@
 
 <script type="text/javascript">
     $(document).ready(function () {
+        //full with screen
+        $("#allcontent").removeClass("body-content");
+        $("#allcontent").removeClass("container");
+
         // Find all iframes
         var $iframes = $("iframe");
 
