--- a/EqUiWebUi/Views/NgacElectrode/PlanTipChange.cshtml
+++ b/EqUiWebUi/Views/NgacElectrode/PlanTipChange.cshtml
@@ -22,7 +22,7 @@
                         <div class="col-sm-5">
                             <label class="control-label col-sm-4" for="location">Op locatie</label>
                             <div class="col-sm-8">
-                                @MyFilters.LocationDropdown("location")
+                                @MyFilters.LocationDropdownGreenfield("location")
                             </div>
                         </div>
                     </div>
