--- a/EqUiWebUi/Views/Home/Rendersite.cshtml
+++ b/EqUiWebUi/Views/Home/Rendersite.cshtml
@@ -37,6 +37,10 @@
 
 <script type="text/javascript">
     $(document).ready(function () {
+        //full with screen
+        $("#allcontent").removeClass("body-content");
+        $("#allcontent").removeClass("container");
+
         // Find all iframes
         var $iframes = $("iframe");
 
